# give_and_get_uuid

./: .env  Cargo.toml
src/: main.rs
uuid-generator/: Cargo.toml
uuid-generator/src/: lib.rs
